@@ -23,7 +23,8 @@ The ``crash`` binary supports several command line arguments.
 +---------------------------------------+--------------------------------------------------+
 | ``--version``                         | Print the crash version and exit.                |
 +---------------------------------------+--------------------------------------------------+
-
+| ``--sysinfo``                         | Print system and cluster information.            |
++---------------------------------------+--------------------------------------------------+
 
 Example Usage
 =============
@@ -70,7 +71,8 @@ You can get a list of commands by typing the command ``\?``:
 +----------------------+------------------------------------------------------------------------------------+
 | ``\check``           | Query the sys.checks table for failing cluster checks                              |
 +----------------------+------------------------------------------------------------------------------------+
-
+| ``\sysinfo``         | Query the ``sys`` tables for system and cluster information                        |
++----------------------+------------------------------------------------------------------------------------+
 
 ===============
 Status Messages
